Second commit wiht several changes on design

--- a/currency-exchange.html
+++ b/currency-exchange.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Services | EuroExchangeUSA</title>
+    <title>Currency Exchange | EuroExchangeUSA</title>
   </head>
   <body>
     <nav
@@ -125,9 +125,9 @@
 
     <main>
       <section
-        class="bg-container-img"
+        class="bg-container-img position-relative"
         style="
-          background-image: url(/img/service.jpg);
+          background-image: url(img/currency1.jpg);
           background-position: 50% 40%;
         "
       >
@@ -135,64 +135,92 @@
           class="container position-absolute top-50 start-50 translate-middle"
         >
           <div class="text-center">
-            <h1 class="text-center text-white">SERVICES</h1>
+            <h1 class="text-center text-white text-uppercase">
+              Eliminating Currency Exchange Hassle
+            </h1>
           </div>
         </div>
       </section>
 
-      <section>
+      <section class="pt-5">
         <div class="container">
           <div class="row">
-            <div class="row pt-5">
-              <div class="col-md-8">
-                <h2 class="text-start">THIS IS WHAT WE DO</h2>
-                <p>
-                  Our team is entirely dedicated and trained to provide precise
-                  and reliable knowledge of the market in order to answer any
-                  questions you might have.
-                </p>
-                <p>
-                  With any of our services, whether personal or professional, we
-                  will guide you through the process of purchasing and
-                  transferring currencies across the world ensuring that you get
-                  the Most Competitive Currency Exchange Worldwide!
-                </p>
-                <p>
-                  EURO EXCHANGE provides genuine value, making every
-                  transaction: EASY, TRANSPARENT, FAST & SECURE.
-                </p>
-              </div>
-              <div class="col-md-4">
-                <img class="rounded" src="/img/buy.jpg" width="400px" alt="" />
-              </div>
-            </div>
-            <div class="row mt-5 mb-5">
-              <div class="col-md-6">
-                <h3>OUR SERVICES:</h3>
-                <ul>
-                  <li>Currency exchange</li>
-                  <li>International wire transfers</li>
-                  <li>Online orders</li>
-                  <li>Debit cards accepted in stores</li>
-                  <li>FX Retail</li>
-                  <li>FX Wholesale</li>
-                </ul>
-              </div>
-              <div class="col-md-6">
-                <h3>WHAT TO EXPECT:</h3>
-                <ul>
-                  <li>MOST competitive rates</li>
-                  <li>0% commission – Quality Service Driven</li>
-                  <li>Exceptional Customer Care - Solution Driven</li>
-                  <li>Dedicated Expert Guidance – Satisfaction Driven</li>
-                  <li>Individually Tailored Services - Client Driven</li>
-                  <li>
-                    Totally secure international transfers for over 30 world
-                    currencies
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <p>
+              What do customers in South Florida look for in a foreign exchange
+              service? We asked this very question when we began developing our
+              foreign currency exchange service. We came up with a spectacular
+              idea — our foreign currency exchange delivery service, which,
+              along with our fair and affordable exchange rates, made us one of
+              the most dependable companies for travelers.
+            </p>
+            <p>
+              We aim to offer our customers with a currency exchange service
+              they can consistently rely on to provide them reasonable rates and
+              a bundle of services they can use to make the entire process
+              convenient and simple. We have done just that!
+            </p>
+
+            <h5>We Are Your One-Stop Shop for Currency Exchange Service</h5>
+            <p>
+              Customers running low on time can depend on us to come through for
+              them. Our primary focus is ensuring our customers do not have to
+              wait for their currency to arrive or have the need to visit
+              another company for a service if the first one they chose doesn’t
+              provide it. So, we kept adding onto the list, until we became your
+              one-stop shop, consisting of the following services:
+            </p>
+            <ul>
+              <li>Currency exchange home delivery</li>
+              <li>Currency exchange</li>
+              <li>International payments</li>
+              <li>International wire transfers</li>
+              <li>Prepaid cards</li>
+              <li>After hours services</li>
+            </ul>
+
+            <h5>
+              Our Money Exchange Home Delivery is One of Our High Ranking
+              Services
+            </h5>
+            <p>
+              Our foreign exchange home delivery is a hassle-free service,
+              requiring customers to place an order online. For people who have
+              to fly out of the United States on a short notice, this is a
+              service they will definitely find handy. Imagine how much time you
+              will save and the stress you will remove, knowing you do not have
+              to visit a currency exchange store.
+            </p>
+            <p>
+              With locations in Spain, Italy, Peru, Colombia, France, and UAE,
+              you will always have us with you. If we are not where you are,
+              don’t stress because we offer our exchange, delivery, and transfer
+              services to more than 30 countries. Wherever you are, you will get
+              your money.
+            </p>
+
+            <h5>Why Choose Us?</h5>
+            <p>
+              Choose us because we are confident that we meet your expectations
+              in all areas of service. With us, you can expect the following
+              from Euro Exchange USA:
+            </p>
+
+            <ul>
+              <li>Affordable rates in South Florida</li>
+              <li>Zero percent cut-in</li>
+              <li>Superb customer care</li>
+
+              <li>Dedicated guidance and advice from qualified experts</li>
+
+              <li>Personalized services</li>
+              <li>Secure international transfers to several countries</li>
+              <li>
+                If you are looking for quality and reliable currency exchange
+                service in South Florida, you can either visit us in Fort
+                Lauderdale, Miami or Aventura, Florida, or give us a call at
+                <a href="telto:+13053772536">305-377-2536</a>.
+              </li>
+            </ul>
           </div>
         </div>
       </section>
