--- a/about-us.html
+++ b/about-us.html
@@ -15,10 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>About Us</title>
+    <title>About Us | EuroExchangeUSA</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav
+      class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
+      style="--bs-bg-opacity: 0.5"
+    >
       <div
         class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
       >
@@ -26,7 +29,7 @@
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250rem" alt="" />
+          <img src="img/euro_logo.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -41,17 +44,23 @@
         </button>
 
         <div
-          class="collapse navbar-collapse col-12 col-md-auto mb-2 justify-content-end mb-md-0"
+          class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
+          <div class="d-flex">
+            <a
+              href="https://xchangeofamerica.com/"
+              class="text-decoration-none btn btn-sm btn-primary"
+              >ORDER ONLINE</a
+            >
+          </div>
+
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About Us</a>
+              <a class="nav-link active" href="about-us.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -70,10 +79,14 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Buy Sell Currency</a>
+                  <a class="dropdown-item" href="https://xchangeofamerica.com/"
+                    >Buy Sell Currency</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Currency Exchange</a>
+                  <a class="dropdown-item" href="currency-exchange.html"
+                    >Currency Exchange</a
+                  >
                 </li>
               </ul>
             </li>
@@ -93,7 +106,9 @@
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="locations.html">Doral, FL</a>
+                  <a class="dropdown-item" href="location-doral.html"
+                    >Doral, FL</a
+                  >
                 </li>
               </ul>
             </li>
@@ -109,143 +124,126 @@
     </nav>
 
     <main>
+      <section
+        class="bg-container-img position-relative"
+        style="
+          background-image: url(img/bank.jpg);
+          background-position: 50% 40%;
+        "
+      >
+        <div
+          class="container position-absolute top-50 start-50 translate-middle"
+        >
+          <div class="text-center">
+            <h1 class="text-center text-white">ABOUT US</h1>
+          </div>
+        </div>
+      </section>
+
       <section>
-        <div class="container mb-5">
+        <div class="container mt-5">
           <div class="row">
+            <div class="col-md-2 bg-light">
+              <div class="pt-5">
+                <h3>OUR VISION</h3>
+                <p>A global transformation for currency exchange</p>
+                <h3>OUR MISSION</h3>
+                <p>Exchange rates should be fair, because they can be</p>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <h1>Working With You, For You</h1>
+              <p>
+                By focusing on your requirements and structuring transfers to
+                meet your needs, we will save you a tremendous amount of time,
+                money and hassle. Our client and solution-oriented mind-frame is
+                unsurpassed in the Foreign Exchange industry.
+              </p>
+              <p>
+                We tailor to each individual client needs, but one element stays
+                the same, we will always provide The Most Competitive Currency
+                Exchange Worldwide.
+              </p>
+              <p>
+                We take great pride and pleasure in being able to provide
+                remarkably competitive exchange rates to all our clients. We are
+                eligible to do this due to our vast global presence and because
+                of high volumes of foreign currency we purchase on a daily
+                basis.
+              </p>
+              <p>
+                From the moment you walk into one of our branches or open your
+                computer, we will do everything we can to help make your life
+                easier. We want you – our client – to receive the absolute and
+                the most valuable benefits that you deserve. When working with
+                us you will sense and feel the trusting and loyal environment
+                this company was founded on.
+              </p>
+            </div>
             <div
-              class="col-md-12 col-lg-12 pt-5 pb-5"
+              class="col-md-2"
               style="
-                background-image: url(img/dollar-one.jpg);
-                background-repeat: no-repeat;
+                background-image: url(img/dollar-two.jpg);
                 background-size: cover;
               "
             >
-              <div class="pt-5 pb-5 mt-5 mb-5"></div>
-            </div>
-            <div class="container">
-              <div class="row">
-                <h3 class="col-md-12 text-center pt-3">ABOUT US</h3>
-                <div class="col-md-2">
-                  <h3>OUR VISION</h3>
-                  <p>A global transformation for currency exchange</p>
-                  <h3>OUR MISSION</h3>
-                  <p>Exchange rates should be fair, because they can be</p>
-                </div>
-                <div class="col-md-8">
-                  <h3>Working With You, For You</h3>
-                  <p>
-                    By focusing on your requirements and structuring transfers
-                    to meet your needs, we will save you a tremendous amount of
-                    time, money and hassle. Our client and solution-oriented
-                    mind-frame is unsurpassed in the Foreign Exchange industry.
-                  </p>
-                  <p>
-                    We tailor to each individual client needs, but one element
-                    stays the same, we will always provide The Most Competitive
-                    Currency Exchange Worldwide.
-                  </p>
-                  <p>
-                    We take great pride and pleasure in being able to provide
-                    remarkably competitive exchange rates to all our clients. We
-                    are eligible to do this due to our vast global presence and
-                    because of high volumes of foreign currency we purchase on a
-                    daily basis.
-                  </p>
-                  <p>
-                    From the moment you walk into one of our branches or open
-                    your computer, we will do everything we can to help make
-                    your life easier. We want you – our client – to receive the
-                    absolute and the most valuable benefits that you deserve.
-                    When working with us you will sense and feel the trusting
-                    and loyal environment this company was founded on.
-                  </p>
-                </div>
-                <div
-                  class="col-md-2"
-                  style="
-                    background-image: url(img/dollar-two.jpg);
-                    background-size: cover;
-                  "
-                >
-                  <div></div>
-                </div>
-              </div>
+              <div></div>
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="bg-light pt-5 pb-5">
+    <footer class="bg-light">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Doral Office:</b> 10429, NW 41st Street <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <img src="img/euro_logo.png" width="300rem" alt="" />
+        <div class="row row-col-4 py-5 mt-5 border-top">
+          <div class="col-md-3 text-center">
+            <a
+              href="index.html"
+              class="d-flex align-items-center mb-3 link-dark text-decoration-none"
+            >
+              <img
+                src="img/euro_logo.png"
+                alt="EuroExchangeUSA Bank Logo"
+                style="width: 200px"
+                class="rounded mx-auto"
+              />
+            </a>
             <p>Euro Exchange USA Currency Exchange</p>
             <p>
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
+            <p class="text-muted">&copy; 2021</p>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item mb-2">
-              <a href="index.html" class="nav-link text-muted">Home</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="about-us.html" class="nav-link text-muted">Abouts Us</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="services.html" class="nav-link text-muted">Services</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="locations.html" class="nav-link text-muted">Location</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="rates.html" class="nav-link text-muted">Rates</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="contact-us.html" class="nav-link text-muted"
-                >Contact Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://xchangeofamerica.com/"
-                class="btn btn-outline-primary"
-                >Order Online</a
-              >
-            </li>
-          </ul>
-          <div
-            class="d-flex flex-column flex-sm-row justify-content-between py-2 my-2"
-          >
-            <p>&copy; 2022 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
+
+          <div class="col-md-4 text-center">
+            <h5>Where to find us</h5>
+            <div class="col-md-12">
+              <p>
+                <b>Head Office:</b> 235 SE 1st Street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Doral Office:</b> 10429, NW 41st Street <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Follow us</h5>
+            <ul class="list-unstyled d-flex justify-content-center">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -265,6 +263,45 @@
                 <a class="link-dark" href="#"
                   ><i class="bi bi-youtube" style="font-size: 2rem"></i
                 ></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="about-us.html" class="nav-link p-0 text-muted"
+                  >Abouts Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="services.html" class="nav-link p-0 text-muted"
+                  >Services</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="locations.html" class="nav-link p-0 text-muted"
+                  >Location</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                  >Contact Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="https://xchangeofamerica.com/"
+                  class="btn btn-outline-primary"
+                  >Order Online</a
+                >
               </li>
             </ul>
           </div>
