--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="shorcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
@@ -14,10 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Contact Us</title>
+    <title>Contact Us | EuroExchangeUSA</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav
+      class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
+      style="--bs-bg-opacity: 0.5"
+    >
       <div
         class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
       >
@@ -25,7 +29,7 @@
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250rem" alt="" />
+          <img src="img/euro_logo.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -40,14 +44,20 @@
         </button>
 
         <div
-          class="collapse navbar-collapse col-12 col-md-auto mb-2 justify-content-end mb-md-0"
+          class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
+          <div class="d-flex">
+            <a
+              href="https://xchangeofamerica.com/"
+              class="text-decoration-none btn btn-sm btn-primary"
+              >ORDER ONLINE</a
+            >
+          </div>
+
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about-us.html">About Us</a>
@@ -69,10 +79,14 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Buy Sell Currency</a>
+                  <a class="dropdown-item" href="https://xchangeofamerica.com/"
+                    >Buy Sell Currency</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Currency Exchange</a>
+                  <a class="dropdown-item" href="currency-exchange.html"
+                    >Currency Exchange</a
+                  >
                 </li>
               </ul>
             </li>
@@ -92,7 +106,9 @@
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="locations.html">Doral, FL</a>
+                  <a class="dropdown-item" href="location-doral.html"
+                    >Doral, FL</a
+                  >
                 </li>
               </ul>
             </li>
@@ -100,7 +116,7 @@
               <a class="nav-link" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact Us</a>
+              <a class="nav-link active" href="contact-us.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -108,101 +124,165 @@
     </nav>
 
     <main>
+      <section
+        class="bg-container-img position-relative"
+        style="
+          background-image: url(img/contact.jpg);
+          background-position: 50% 40%;
+        "
+      >
+        <div
+          class="container position-absolute top-50 start-50 translate-middle"
+        ></div>
+      </section>
+
       <section class="mt-5 mb-5">
         <div class="container">
           <div class="row">
             <div class="col-md-7">
-              <h3>Contact Us</h3>
+              <h3 class="text-center">Contact Us</h3>
 
-              <form>
-                <div class="mb-3">
-                  <label for="FullName" class="form-label">Full Name</label>
-                  <input type="text" class="form-control" id="FullName" />
-                </div>
-
-                <div class="mb-3">
-                  <label for="inputEmail" class="form-label"
-                    >Email address</label
-                  >
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="inputEmail"
-                    aria-describedby="emailHelp"
-                  />
-                  <div id="emailHelp" class="form-text">
-                    We'll never share your email with anyone else.
+              <div class="container-contact-us mt-5">
+                <form>
+                  <div class="mb-3">
+                    <label for="FullName" class="form-label">Full Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Name and Surname"
+                      id="FullName"
+                    />
                   </div>
-                </div>
 
-                <div class="mb-3">
-                  <label for="subject" class="form-label">Subject</label>
-                  <input type="text" class="form-control" id="subject" />
-                </div>
+                  <div class="mb-3">
+                    <label for="inputEmail" class="form-label"
+                      >Email address</label
+                    >
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="inputEmail"
+                      aria-describedby="emailHelp"
+                      placeholder="email@adress.com"
+                    />
+                    <div id="emailHelp" class="form-text">
+                      We'll never share your email with anyone else.
+                    </div>
+                  </div>
 
-                <div class="mb-3">
-                  <label for="FormControlTextarea1" class="form-label"
-                    >Message</label
-                  >
-                  <textarea
-                    class="form-control"
-                    id="FormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                </div>
+                  <div class="mb-3">
+                    <label for="subject" class="form-label">Subject</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Subject"
+                      id="subject"
+                    />
+                  </div>
 
-                <div class="mb-3 form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1"
-                    >Check me out</label
-                  >
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
+                  <div class="mb-3">
+                    <label for="FormControlTextarea1" class="form-label"
+                      >Message</label
+                    >
+                    <textarea
+                      class="form-control"
+                      id="FormControlTextarea1"
+                      placeholder="Your message"
+                      rows="3"
+                    ></textarea>
+                  </div>
+
+                  <div class="mb-3 form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="exampleCheck1"
+                    />
+                    <label class="form-check-label" for="exampleCheck1"
+                      >Check me out</label
+                    >
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
             </div>
-            <div class="col-md-3">
-              <div>
-                <h5>Miami Headquarters</h5>
-                <p class="m-0">235 SE 1st Street, Miami, Florida 33131</p>
-                <p class="m-0">Hours of Operation</p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Mon - Fri | 8:00AM – 5:00PM
-                </p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Saturday | 9:00AM - 3:00PM
-                </p>
-              </div>
+            <div class="col-md-5">
+              <div class="container pt-5 pb-5">
+                <div
+                  class="container-contact-map bg-white text-center pt-5 pb-5"
+                >
+                  <h3>MIAMI HEADQUATERS</h3>
+                  <p>
+                    235 SE 1st Street, <br />
+                    Miami, FL 33131
+                  </p>
 
-              <div class="pt-3">
-                <h5>Downtown Branch</h5>
-                <p class="m-0">235 SE 1st Street, Miami, Florida 33131</p>
-                <p class="m-0">Hours of Operation</p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Mon - Fri | 8:00AM – 5:00PM
-                </p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Saturday | 9:00AM - 3:00PM
-                </p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Sunday | 9:00AM - 4:00PM
-                </p>
-                <p class="m-0">Free valet parking (with purchase)</p>
-              </div>
+                  <h3>HOURS OF OPERATION</h3>
+                  <p>
+                    Mon – Fri | 8:00 AM – 5:00 PM <br />
+                    Saturday | 9:00 AM – 3:00 PM
+                  </p>
 
-              <div class="pt-3">
-                <h5>Doral Branch</h5>
-                <p class="m-0">235 SE 1st Street, Miami, Florida 33131</p>
-                <p class="m-0">Hours of Operation</p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Mon - Fri | 8:00AM – 5:00PM
-                </p>
-                <p class="m-0">
-                  <i class="bi bi-clock"></i> Saturday | 9:00AM - 3:00PM
-                </p>
+                  <h3>DOWNTOWN BRANCH</h3>
+                  <p>
+                    242 NE 1st Street, <br />
+                    Miami, FL 33132
+                  </p>
+                  <h3>HOURS OF OPERATION</h3>
+                  <p>
+                    Mon – Fri | 8:00 AM – 6:00 PM <br />
+                    Saturday | 9:00 AM – 5:00 PM <br />
+                    Sunday | 8:00 AM – 5:00 PM FREE <br />
+                    VALET PARKING <br />
+                    (with purchase)
+                  </p>
+
+                  <h3>DORAL BRANCH</h3>
+                  <p>
+                    10429 NW 41st St, <br />
+                    Doral, FL 33178
+                  </p>
+
+                  <h3>HOURS OF OPERATION</h3>
+                  <p>
+                    Mon – Fri | 8:00 AM – 5:00 PM <br />
+                    Saturday | 9:00 AM – 3:00 PM
+                  </p>
+
+                  <p>
+                    PHONE:<a
+                      class="text-decoration-none"
+                      href="tel:+13053772536"
+                    >
+                      305.377.2536</a
+                    >
+                  </p>
+                  <p>
+                    EMAIL:
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                      >info@euroexchangeusa.com</a
+                    >
+                  </p>
+                  <ul class="list-unstyled d-flex justify-content-center">
+                    <li class="ms-3">
+                      <a class="link-dark" href="#">
+                        <i class="bi bi-facebook" style="font-size: 2rem"></i>
+                      </a>
+                    </li>
+                    <li class="ms-3">
+                      <a class="link-dark" href="#"
+                        ><i class="bi bi-instagram" style="font-size: 2rem"></i
+                      ></a>
+                    </li>
+                    <li class="ms-3">
+                      <a class="link-dark" href="#"
+                        ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -210,76 +290,56 @@
       </section>
     </main>
 
-    <footer class="bg-light pt-5 pb-5">
+    <footer class="bg-light">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Doral Office:</b> 10429, NW 41st Street <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <img src="img/euro_logo.png" width="300rem" alt="" />
+        <div class="row row-col-4 py-5 mt-5 border-top">
+          <div class="col-md-3 text-center">
+            <a
+              href="index.html"
+              class="d-flex align-items-center mb-3 link-dark text-decoration-none"
+            >
+              <img
+                src="img/euro_logo.png"
+                alt="EuroExchangeUSA Bank Logo"
+                style="width: 200px"
+                class="rounded mx-auto"
+              />
+            </a>
             <p>Euro Exchange USA Currency Exchange</p>
             <p>
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
+            <p class="text-muted">&copy; 2021</p>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item mb-2">
-              <a href="index.html" class="nav-link text-muted">Home</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="about-us.html" class="nav-link text-muted">Abouts Us</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="services.html" class="nav-link text-muted">Services</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="locations.html" class="nav-link text-muted">Location</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="rates.html" class="nav-link text-muted">Rates</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="contact-us.html" class="nav-link text-muted"
-                >Contact Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://xchangeofamerica.com/"
-                class="btn btn-outline-primary"
-                >Order Online</a
-              >
-            </li>
-          </ul>
-          <div
-            class="d-flex flex-column flex-sm-row justify-content-between py-2 my-2"
-          >
-            <p>&copy; 2022 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
+
+          <div class="col-md-4 text-center">
+            <h5>Where to find us</h5>
+            <div class="col-md-12">
+              <p>
+                <b>Head Office:</b> 235 SE 1st Street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Doral Office:</b> 10429, NW 41st Street <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Follow us</h5>
+            <ul class="list-unstyled d-flex justify-content-center">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -299,6 +359,45 @@
                 <a class="link-dark" href="#"
                   ><i class="bi bi-youtube" style="font-size: 2rem"></i
                 ></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="about-us.html" class="nav-link p-0 text-muted"
+                  >Abouts Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="services.html" class="nav-link p-0 text-muted"
+                  >Services</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="locations.html" class="nav-link p-0 text-muted"
+                  >Location</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                  >Contact Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="https://xchangeofamerica.com/"
+                  class="btn btn-outline-primary"
+                  >Order Online</a
+                >
               </li>
             </ul>
           </div>
