--- a/location-doral.html
+++ b/location-doral.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Services | EuroExchangeUSA</title>
+    <title>Locations | EuroExchangeUSA</title>
   </head>
   <body>
     <nav
@@ -64,7 +64,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link active dropdown-toggle"
+                class="nav-link dropdown-toggle"
                 href="services.html"
                 id="navbarDropdown1"
                 role="button"
@@ -92,7 +92,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="locations.html"
                 id="navbarDropdown2"
                 role="button"
@@ -125,9 +125,9 @@
 
     <main>
       <section
-        class="bg-container-img"
+        class="bg-container-img position-relative"
         style="
-          background-image: url(/img/service.jpg);
+          background-image: url(img/location.jpg);
           background-position: 50% 40%;
         "
       >
@@ -135,64 +135,148 @@
           class="container position-absolute top-50 start-50 translate-middle"
         >
           <div class="text-center">
-            <h1 class="text-center text-white">SERVICES</h1>
+            <h1 class="text-center text-white">EuroExchangeUSA</h1>
+            <span class="text-white"
+              >is the best comprehensive foreign exchange solution</span
+            >
           </div>
         </div>
       </section>
 
-      <section>
+      <section class="mb-5">
         <div class="container">
-          <div class="row">
-            <div class="row pt-5">
-              <div class="col-md-8">
-                <h2 class="text-start">THIS IS WHAT WE DO</h2>
-                <p>
-                  Our team is entirely dedicated and trained to provide precise
-                  and reliable knowledge of the market in order to answer any
-                  questions you might have.
-                </p>
-                <p>
-                  With any of our services, whether personal or professional, we
-                  will guide you through the process of purchasing and
-                  transferring currencies across the world ensuring that you get
-                  the Most Competitive Currency Exchange Worldwide!
-                </p>
-                <p>
-                  EURO EXCHANGE provides genuine value, making every
-                  transaction: EASY, TRANSPARENT, FAST & SECURE.
-                </p>
+          <div class="row mb-5 mt-5">
+            <p>
+              <span class="fw-bold">Euro Exchange USA</span> is a leading
+              provider of comprehensive foreign exchange services, risk
+              management solutions, and international payments in North America,
+              Europe and Asia.
+            </p>
+            <p>
+              With a focus on superior customer service,
+              <span class="fw-bold">Euro Exchange USA</span> can simplify your
+              foreign currency exchange needs. From travelers to corporations
+              and Money Services Businesses large and small,
+              <span class="fw-bold">Euro Exchange USA</span> puts their clients
+              first. Through this,
+              <span class="fw-bold">Euro Exchange USA</span> will be your first
+              choice in foreign currency exchange and international payments.
+            </p>
+            <p>
+              <span class="fw-bold">Euro Exchange USA</span> relationship-driven
+              approach ensures clients receive tailored solutions and
+              world-class customer service. We help our clients identify and
+              create foreign exchange solutions, delivering a best practices
+              approach through unparalleled customer service to create
+              significant financial and operational efficiencies. <br />
+            </p>
+            <p>
+              As one of North America's largest foreign banknote providers, we
+              recognize that every business has different needs.
+              <span class="fw-bold">Euro Exchange USA</span> is able to deliver
+              the best foreign currency solution for every type of relationship
+              a business could need. Our services are highly customizable to
+              suit each situation. <br />
+            </p>
+          </div>
+          <div class="row mb-5">
+            <div class="col-md-12">
+              <h3>Euro Exchange USA offers:</h3>
+              <ul>
+                <li>North America’s Leading Foreign Currency Provider</li>
+                <li>Advanced Compliance Verification System</li>
+                <li>Experienced Foreign Currency Specialists</li>
+                <li>
+                  Unparalleled Customer Service. Highly rated by clients for our
+                  personalized support
+                </li>
+                <li>
+                  Foreign Bank Note Exchange Services. Euro Exchange USA enables
+                  customers to buy and sell more than 60 foreign currencies from
+                  around the world.
+                </li>
+              </ul>
+            </div>
+            <div class="row">
+              <div class="col-md-4 text-center">
+                <i class="bi bi-person" style="font-size: 7rem"></i>
+                <h3>Customer First</h3>
+                <p>We earn the right to be our clients’ first choice.</p>
               </div>
-              <div class="col-md-4">
-                <img class="rounded" src="/img/buy.jpg" width="400px" alt="" />
+              <div class="col-md-4 text-center">
+                <i class="bi bi-award" style="font-size: 7rem"></i>
+                <h3>Integrity</h3>
+                <p>We hold ourselves to the highest standard to build trust.</p>
+              </div>
+              <div class="col-md-4 text-center">
+                <i class="bi bi-person-hearts" style="font-size: 7rem"></i>
+                <h3>Passionate</h3>
+                <p>We are driven to be the best in class.</p>
               </div>
             </div>
-            <div class="row mt-5 mb-5">
-              <div class="col-md-6">
-                <h3>OUR SERVICES:</h3>
-                <ul>
-                  <li>Currency exchange</li>
-                  <li>International wire transfers</li>
-                  <li>Online orders</li>
-                  <li>Debit cards accepted in stores</li>
-                  <li>FX Retail</li>
-                  <li>FX Wholesale</li>
-                </ul>
-              </div>
-              <div class="col-md-6">
-                <h3>WHAT TO EXPECT:</h3>
-                <ul>
-                  <li>MOST competitive rates</li>
-                  <li>0% commission – Quality Service Driven</li>
-                  <li>Exceptional Customer Care - Solution Driven</li>
-                  <li>Dedicated Expert Guidance – Satisfaction Driven</li>
-                  <li>Individually Tailored Services - Client Driven</li>
-                  <li>
-                    Totally secure international transfers for over 30 world
-                    currencies
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-5">
+        <div class="row">
+          <div class="col-md-12 col-lg-6 pe-0">
+            <div class="container bg-secondary pt-5 pb-5">
+              <div class="container-contact-map bg-white text-center pt-5 pb-5">
+                <h3>DORAL BRANCH</h3>
+                <p>
+                  10429 NW 41st St, <br />
+                  Doral, FL 33178
+                </p>
+
+                <h3>HOURS OF OPERATION</h3>
+                <p>
+                  Mon – Fri | 8:00 AM – 5:00 PM <br />
+                  Saturday | 9:00 AM – 3:00 PM
+                </p>
+
+                <h3>DOWNTOWN BRANCH</h3>
+                <p>
+                  242 NE 1st Street, <br />
+                  Miami, FL 33132
+                </p>
+                <h3>HOURS OF OPERATION</h3>
+                <p>
+                  Mon – Fri | 8:00 AM – 6:00 PM <br />
+                  Saturday | 9:00 AM – 5:00 PM <br />
+                  Sunday | 8:00 AM – 5:00 PM FREE <br />
+                  VALET PARKING <br />
+                  (with purchase)
+                </p>
+
+                <p>PHONE: 305.377.2536</p>
+                <p>EMAIL: info@euroexchangeusa.com</p>
+                <ul class="list-unstyled d-flex justify-content-center">
+                  <li class="ms-3">
+                    <a class="link-dark" href="#">
+                      <i class="bi bi-facebook" style="font-size: 2rem"></i>
+                    </a>
+                  </li>
+                  <li class="ms-3">
+                    <a class="link-dark" href="#"
+                      ><i class="bi bi-instagram" style="font-size: 2rem"></i
+                    ></a>
+                  </li>
+                  <li class="ms-3">
+                    <a class="link-dark" href="#"
+                      ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                    ></a>
                   </li>
                 </ul>
+
+                <a href="#" class="btn btn-outline-secondary"
+                  >DORAL Location Info</a
+                >
               </div>
             </div>
+          </div>
+          <div class="col-md-12 col-lg-6 ps-0">
+            <div id="map"></div>
           </div>
         </div>
       </section>
@@ -314,6 +398,10 @@
     </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/maps.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqHbchhgnbUKccKtX-gpLjqFgQBLlfnEo&callback=initMap&v=weekly"
+      defer
+    ></script>
   </body>
 </html>
