--- a/rates.html
+++ b/rates.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="shorcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
@@ -14,10 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Rates</title>
+    <title>Rates | EuroExchangeUSA</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav
+      class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
+      style="--bs-bg-opacity: 0.5"
+    >
       <div
         class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
       >
@@ -25,7 +29,7 @@
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250rem" alt="" />
+          <img src="img/euro_logo.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -40,14 +44,20 @@
         </button>
 
         <div
-          class="collapse navbar-collapse col-12 col-md-auto mb-2 justify-content-end mb-md-0"
+          class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
+          <div class="d-flex">
+            <a
+              href="https://xchangeofamerica.com/"
+              class="text-decoration-none btn btn-sm btn-primary"
+              >ORDER ONLINE</a
+            >
+          </div>
+
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about-us.html">About Us</a>
@@ -69,10 +79,14 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Buy Sell Currency</a>
+                  <a class="dropdown-item" href="https://xchangeofamerica.com/"
+                    >Buy Sell Currency</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Currency Exchange</a>
+                  <a class="dropdown-item" href="currency-exchange.html"
+                    >Currency Exchange</a
+                  >
                 </li>
               </ul>
             </li>
@@ -92,12 +106,14 @@
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="locations.html">Doral, FL</a>
+                  <a class="dropdown-item" href="location-doral.html"
+                    >Doral, FL</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="rates.html">Rates</a>
+              <a class="nav-link active" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact-us.html">Contact Us</a>
@@ -109,12 +125,17 @@
 
     <main>
       <section
-        class="pt-5 pb-5 mb-5"
-        style="background-image: url(img/stock-wall.jpg)"
+        class="bg-container-img position-relative"
+        style="
+          background-image: url(img/stock-wall.jpg);
+          background-position: 50% 40%;
+        "
       >
-        <div class="conatiner pt-5 pb-5">
-          <div class="row">
-            <div class="text-white"><h3>RATES</h3></div>
+        <div
+          class="container position-absolute top-50 start-50 translate-middle"
+        >
+          <div class="text-center">
+            <h1 class="text-center text-light">RATES</h1>
           </div>
         </div>
       </section>
@@ -395,76 +416,56 @@
       </section>
     </main>
 
-    <footer class="bg-light pt-5 pb-5">
+    <footer class="bg-light">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Doral Office:</b> 10429, NW 41st Street <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <p>
-              <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-              <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 text-start">
-            <img src="img/euro_logo.png" width="300rem" alt="" />
+        <div class="row row-col-4 py-5 mt-5 border-top">
+          <div class="col-md-3 text-center">
+            <a
+              href="index.html"
+              class="d-flex align-items-center mb-3 link-dark text-decoration-none"
+            >
+              <img
+                src="img/euro_logo.png"
+                alt="EuroExchangeUSA Bank Logo"
+                style="width: 200px"
+                class="rounded mx-auto"
+              />
+            </a>
             <p>Euro Exchange USA Currency Exchange</p>
             <p>
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
+            <p class="text-muted">&copy; 2021</p>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item mb-2">
-              <a href="index.html" class="nav-link text-muted">Home</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="about-us.html" class="nav-link text-muted">Abouts Us</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="services.html" class="nav-link text-muted">Services</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="locations.html" class="nav-link text-muted">Location</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="rates.html" class="nav-link text-muted">Rates</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="contact-us.html" class="nav-link text-muted"
-                >Contact Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://xchangeofamerica.com/"
-                class="btn btn-outline-primary"
-                >Order Online</a
-              >
-            </li>
-          </ul>
-          <div
-            class="d-flex flex-column flex-sm-row justify-content-between py-2 my-2"
-          >
-            <p>&copy; 2022 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
+
+          <div class="col-md-4 text-center">
+            <h5>Where to find us</h5>
+            <div class="col-md-12">
+              <p>
+                <b>Head Office:</b> 235 SE 1st Street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Doral Office:</b> 10429, NW 41st Street <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+
+            <div class="col-md-12">
+              <p>
+                <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
+                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Follow us</h5>
+            <ul class="list-unstyled d-flex justify-content-center">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -484,6 +485,45 @@
                 <a class="link-dark" href="#"
                   ><i class="bi bi-youtube" style="font-size: 2rem"></i
                 ></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-2 text-center">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="about-us.html" class="nav-link p-0 text-muted"
+                  >Abouts Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="services.html" class="nav-link p-0 text-muted"
+                  >Services</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="locations.html" class="nav-link p-0 text-muted"
+                  >Location</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                  >Contact Us</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="https://xchangeofamerica.com/"
+                  class="btn btn-outline-primary"
+                  >Order Online</a
+                >
               </li>
             </ul>
           </div>
